feat: spring core翻译至10.1.2

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -11287,15 +11287,338 @@ public class MyBean {
 </beans>
 ```
 
+**使用`<util:constant/>`**
+
+考虑以下bean定义：
+
+```xml
+<bean id="..." class="...">
+    <property name="isolation">
+        <bean id="java.sql.Connection.TRANSACTION_SERIALIZABLE"
+                class="org.springframework.beans.factory.config.FieldRetrievingFactoryBean" />
+    </property>
+</bean>
+```
+
+前面的配置使用Spring FactoryBean实现（FieldRetrievingFactoryBean）将bean上isolation属性的值设置为java.sql.Connection.TRANSACTION_SERIALIZABLE。这一切都很好，但是它是冗长的，（不必要地）将Spring的内部管道暴露给最终用户。
+
+以下基于XML模式的版本更简洁，清楚地表达了开发人员的意图（“注入此常量”），并且可读性更好：
+
+```xml
+<bean id="..." class="...">
+    <property name="isolation">
+        <util:constant static-field="java.sql.Connection.TRANSACTION_SERIALIZABLE"/>
+    </property>
+</bean>
+```
+
+**从字段值设置bean属性或构造函数参数**
+
+[`FieldRetrievingFactoryBean`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/beans/factory/config/FieldRetrievingFactoryBean.html)是检索静态或非静态字段值的FactoryBean。它通常用于检索public` `static` `final常量，然后可以用此来为另一个bean设置属性值或构造函数参数。
+
+下面的示例显示了使用[`staticField`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/beans/factory/config/FieldRetrievingFactoryBean.html#setStaticField(java.lang.String))属性如何暴露static字段：
+
+```xml
+<bean id="myField"
+        class="org.springframework.beans.factory.config.FieldRetrievingFactoryBean">
+    <property name="staticField" value="java.sql.Connection.TRANSACTION_SERIALIZABLE"/>
+</bean>
+```
+
+还有一个方便用法，将static字段指定为bean名称，如下示例显示：
+
+```xml
+<bean id="java.sql.Connection.TRANSACTION_SERIALIZABLE"
+        class="org.springframework.beans.factory.config.FieldRetrievingFactoryBean"/>
+```
+
+这确实意味着bean id不再有任何选择（因此，任何其他引用它的bean也必须使用此更长的名称），但是这种形式非常方便用作内部bean,因为不必为bean引用指定id，如以下示例所示：
+
+```xml
+<bean id="..." class="...">
+    <property name="isolation">
+        <bean id="java.sql.Connection.TRANSACTION_SERIALIZABLE"
+                class="org.springframework.beans.factory.config.FieldRetrievingFactoryBean" />
+    </property>
+</bean>
+```
+
+您还可以访问另一个bean的非静态（实例）字段，如[`FieldRetrievingFactoryBean`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/beans/factory/config/FieldRetrievingFactoryBean.html)类中的API文档中所述。
+
+在Spring中将枚举值注入到bean作为属性或构造函数参数很容易做到。您实际上不必做任何事情或了解Spring内部细节（甚至是诸如FieldRetrievingFactoryBean）。以下示例显示了注入枚举值：
+
+```java
+package javax.persistence;
+
+public enum PersistenceContextType {
+
+    TRANSACTION,
+    EXTENDED
+}
+```
+
+现在考虑以下类型的PersistenceContextType的setter方法和相应的bean定义：
+
+```java
+package example;
+
+public class Client {
+
+    private PersistenceContextType persistenceContextType;
+
+    public void setPersistenceContextType(PersistenceContextType type) {
+        this.persistenceContextType = type;
+    }
+}
+```
+
+```xml
+<bean class="example.Client">
+    <property name="persistenceContextType" value="TRANSACTION"/>
+</bean>
+```
+
+**使用`<util:property-path/>`**
+
+考虑以下示例：
+
+```xml
+<!-- target bean to be referenced by name -->
+<bean id="testBean" class="org.springframework.beans.TestBean" scope="prototype">
+    <property name="age" value="10"/>
+    <property name="spouse">
+        <bean class="org.springframework.beans.TestBean">
+            <property name="age" value="11"/>
+        </bean>
+    </property>
+</bean>
+
+<!-- results in 10, which is the value of property 'age' of bean 'testBean' -->
+<bean id="testBean.age" class="org.springframework.beans.factory.config.PropertyPathFactoryBean"/>
+```
+
+前面的配置使用Spring FactoryBean实现（PropertyPathFactoryBean）创建一个称为testBean.age的bean，其值等于testBean的age属性。
+
+现在考虑以下示例，该示例添加了一个`<util:property-path/>`元素：
+
+```xml
+<!-- target bean to be referenced by name -->
+<bean id="testBean" class="org.springframework.beans.TestBean" scope="prototype">
+    <property name="age" value="10"/>
+    <property name="spouse">
+        <bean class="org.springframework.beans.TestBean">
+            <property name="age" value="11"/>
+        </bean>
+    </property>
+</bean>
+
+<!-- results in 10, which is the value of property 'age' of bean 'testBean' -->
+<util:property-path id="name" path="testBean.age"/>
+```
+
+`<property-path/>`元素的path属性的值遵循beanName.beanProperty的形式。在这种情况下，它取了名为testBean的age属性。该age的值为10。
+
+**使用`<util:property-path/>`设置bean属性或构造函数参数**
+
+PropertyPathFactoryBean是FactoryBean，可以计算给定目标对象上的属性路径。可以直接指定目标对象，也可以通过bean名称指定目标对象。然后，您可以在另一个bean定义中使用此值作为属性值或构造函数参数。
+
+以下示例显示了在另一个bean中使用路径的示例：
+
+```xml
+<!-- target bean to be referenced by name -->
+<bean id="person" class="org.springframework.beans.TestBean" scope="prototype">
+    <property name="age" value="10"/>
+    <property name="spouse">
+        <bean class="org.springframework.beans.TestBean">
+            <property name="age" value="11"/>
+        </bean>
+    </property>
+</bean>
+
+<!-- results in 11, which is the value of property 'spouse.age' of bean 'person' -->
+<bean id="theAge"
+        class="org.springframework.beans.factory.config.PropertyPathFactoryBean">
+    <property name="targetBeanName" value="person"/>
+    <property name="propertyPath" value="spouse.age"/>
+</bean>
+```
+
+在下面的示例中，路径值在内部bean中得到：
+
+```xml
+<!-- results in 12, which is the value of property 'age' of the inner bean -->
+<bean id="theAge"
+        class="org.springframework.beans.factory.config.PropertyPathFactoryBean">
+    <property name="targetObject">
+        <bean class="org.springframework.beans.TestBean">
+            <property name="age" value="12"/>
+        </bean>
+    </property>
+    <property name="propertyPath" value="age"/>
+</bean>
+```
+
+还有一个简短形式，其中bean名称是属性路径。如以下示例：
+
+```xml
+<!-- results in 10, which is the value of property 'age' of bean 'person' -->
+<bean id="person.age"
+        class="org.springframework.beans.factory.config.PropertyPathFactoryBean"/>
+```
+
+此形式确实意味着bean名称别无选择。对其的任何引用也必须使用相同的id，即路径。如果用作内bean，则根本不需要引用它，如以下示例所示：
+
+```xml
+<bean id="..." class="...">
+    <property name="age">
+        <bean id="person.age"
+                class="org.springframework.beans.factory.config.PropertyPathFactoryBean"/>
+    </property>
+</bean>
+```
+
+您可以在实际定义中专门设置结果类型。对于大多数用例，这不是必需的，但有时可能有用。有关此功能的更多信息，请参见Javadoc。
+
+**使用`<util:properties/>`**
+
+考虑以下示例：
+
+```xml
+<!-- creates a java.util.List instance with values loaded from the supplied 'sourceList' -->
+<bean id="emails" class="org.springframework.beans.factory.config.ListFactoryBean">
+    <property name="sourceList">
+        <list>
+            <value>pechorin@hero.org</value>
+            <value>raskolnikov@slums.org</value>
+            <value>stavrogin@gov.org</value>
+            <value>porfiry@gov.org</value>
+        </list>
+    </property>
+</bean>
+```
+
+前面的配置使用Spring FactoryBean实现（ListFactoryBean）来创建java.util.List实例，并从提供的sourceList获取的值初始化它。
+
+以下示例使用`<util:list/>`元素来更简洁的表示：
+
+```xml
+<!-- creates a java.util.List instance with the supplied values -->
+<util:list id="emails">
+    <value>pechorin@hero.org</value>
+    <value>raskolnikov@slums.org</value>
+    <value>stavrogin@gov.org</value>
+    <value>porfiry@gov.org</value>
+</util:list>
+```
+
+您还可以通过使用`<util:list/>`元素上的list-class属性来实例化和填充确切List类型。例如，如果我们确实需要用java.util.LinkedList进行实例化，则可以使用以下配置：
+
+```xml
+<util:list id="emails" list-class="java.util.LinkedList">
+    <value>jackshaftoe@vagabond.org</value>
+    <value>eliza@thinkingmanscrumpet.org</value>
+    <value>vanhoek@pirate.org</value>
+    <value>d'Arcachon@nemesis.org</value>
+</util:list>
+```
+
+如果未提供list-class属性，则容器会选择List实现。
 
 
 
+**使用`<util:map/>`**
+
+考虑以下示例：
+
+```xml
+<!-- creates a java.util.Map instance with values loaded from the supplied 'sourceMap' -->
+<bean id="emails" class="org.springframework.beans.factory.config.MapFactoryBean">
+    <property name="sourceMap">
+        <map>
+            <entry key="pechorin" value="pechorin@hero.org"/>
+            <entry key="raskolnikov" value="raskolnikov@slums.org"/>
+            <entry key="stavrogin" value="stavrogin@gov.org"/>
+            <entry key="porfiry" value="porfiry@gov.org"/>
+        </map>
+    </property>
+</bean>
+```
+
+前面的配置使用Spring FactoryBean实现（MapFactoryBean）来创建java.util.Map实例，并使用从提供的'sourceMap'中获取的键值对初始化。
+
+以下示例使用`<util:map/>`元素来更简洁的表示：
+
+```xml
+<!-- creates a java.util.Map instance with the supplied key-value pairs -->
+<util:map id="emails">
+    <entry key="pechorin" value="pechorin@hero.org"/>
+    <entry key="raskolnikov" value="raskolnikov@slums.org"/>
+    <entry key="stavrogin" value="stavrogin@gov.org"/>
+    <entry key="porfiry" value="porfiry@gov.org"/>
+</util:map>
+```
+
+您还可以通过在`<util:map/>`元素上使用'map-class'属性来实例化和填充的Map确切类型。例如，如果我们确实需要实例化java.util.TreeMap，则可以使用以下配置：
+
+```xml
+<util:map id="emails" map-class="java.util.TreeMap">
+    <entry key="pechorin" value="pechorin@hero.org"/>
+    <entry key="raskolnikov" value="raskolnikov@slums.org"/>
+    <entry key="stavrogin" value="stavrogin@gov.org"/>
+    <entry key="porfiry" value="porfiry@gov.org"/>
+</util:map>
+```
+
+如果未提供'map-class'属性，则容器会选择Map实现。
+
+**使用`<util:set/>`**
+
+考虑以下示例：
+
+```xml
+<!-- creates a java.util.Set instance with values loaded from the supplied 'sourceSet' -->
+<bean id="emails" class="org.springframework.beans.factory.config.SetFactoryBean">
+    <property name="sourceSet">
+        <set>
+            <value>pechorin@hero.org</value>
+            <value>raskolnikov@slums.org</value>
+            <value>stavrogin@gov.org</value>
+            <value>porfiry@gov.org</value>
+        </set>
+    </property>
+</bean>
+```
+
+前面的配置使用Spring FactoryBean实现（SetFactoryBean）来创建java.util.Set实例，并使用从提供的sourceSet中获取的值初始化。
+
+以下示例使用`<util:set/>`元素来更简洁的表示：
+
+```xml
+<!-- creates a java.util.Set instance with the supplied values -->
+<util:set id="emails">
+    <value>pechorin@hero.org</value>
+    <value>raskolnikov@slums.org</value>
+    <value>stavrogin@gov.org</value>
+    <value>porfiry@gov.org</value>
+</util:set>
+```
+
+您还可以通过使用`<util:set/>`元素上的set-class属性来实例化和填充的确切Set类型。例如，如果我们确实需要实例化java.util.TreeSet，则可以使用以下配置：
+
+```xml
+<util:set id="emails" set-class="java.util.TreeSet">
+    <value>pechorin@hero.org</value>
+    <value>raskolnikov@slums.org</value>
+    <value>stavrogin@gov.org</value>
+    <value>porfiry@gov.org</value>
+</util:set>
+```
+
+如果未提供set-class属性，则容器会选择Set实现。
 
 
 
-
-
-
+### 10.1.2. `aop`结构
 
 
 
