feat: spring testing翻译至3.4.1

--- a/docs/01.文档翻译/01.Spring Framework/02.testing.md
+++ b/docs/01.文档翻译/01.Spring Framework/02.testing.md
@@ -89,6 +89,120 @@ Spring包括许多可以帮助单元测试的类。他们分为两类：
 
 # 3. 集成测试
 
+本章（本章的其余大部分）涵盖了spring应用程序的集成测试。它包括以下主题：
+
+- [Overview](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-overview)
+- [Goals of Integration Testing](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-goals)
+- [JDBC Testing Support](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-support-jdbc)
+- [Annotations](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations)
+- [Spring TestContext Framework](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-framework)
+- [MockMvc](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#spring-mvc-test-framework)
+
+
+
+## 3.1. 概述
+
+无需部署到应用程序服务器或连接到其他企业基础架构就能够执行一些集成测试很重要。这样做可以让您测试以下内容：
+
+- Spring IoC 容器上下文的正确装配
+- 使用JDBC或ORM工具访问数据。这可以包括SQL语句，Hibernate 查询，JPA实体映射等。
+
+Spring框架在spring-test模块中提供了一流的支持。实际的JAR文件的名称可能包括发行版本，也可能是org.springframework.test形式，具体取决于您从何处获得的（请参阅 [section on Dependency Management](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#dependency-management)）。
+
+该库包括org.springframework.test软件包，其中包含用于与Spring容器集成测试的有价值的类。该测试不依赖应用程序服务器或其他部署环境。此类测试的运行速度比单元测试要慢，但是比依靠部署到应用程序服务器的测试或远程测试要快得多。
+
+单位和集成测试支持以注解驱动的 [Spring TestContext Framework](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-framework)的形式提供。TestContext框架对实际使用测试框架不可知，该框架允许在包括JUnit，TestNG等各种环境中的测试工具。
+
+
+
+## 3.2. 集成测试的目标
+
+Spring的集成测试支持以下主要目标：
+
+- 管理测试间的[Spring IoC container caching](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testing-ctx-management)
+- 提供 [Dependency Injection of test fixture instances](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testing-fixture-di).
+- 提供适合集成测试的 [transaction management](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testing-tx) 
+- 提供 [Spring-specific base classes](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testing-support-classes) ，以帮助开发人员编写集成测试。
+
+
+
+### 3.2.1. 上下文管理和缓存
+
+Spring TestContext框架提供了Spring ApplicationContext 实例和WebApplicationContext 实例的一致加载以及这些上下文的缓存。支持加载上下文的缓存非常重要，因为启动时间可能会成为一个问题 - 不是因为Spring本身的开销，而是因为Spring容器实例化的对象需要时间来实例化。例如，一个具有50至100个Hibernate 映射文件的项目可能需要10到20秒才能加载映射文件，在每个测试中承担这样的开销导致整体测试运行较慢，从而降低了开发人员的生产效率。
+
+测试类通常会声明XML格式的一系列资源位置或Groovy配置元数据（通常在类路径中）或用于配置应用程序的组件类数组。这些位置或类与web.xmll中指定的或其他配置文件相同或相似。
+
+默认情况下，加载后，为每个测试重复使用了配置的ApplicationContext。因此，每个测试套件仅产生一次设置成本，随后的测试执行速度要快得多。在这种情况下，“测试套件”一词是指在同一JVM中运行的所有测试--例如，所有测试都来自给定项目或模块的 Ant, Maven, 或Gradle  构建。在不太可能的情况下，测试破坏了应用程序上下文并需要重新加载（例如，通过修改bean定义或应用程序对象的状态）可以配置TestContext 框架以重新加载配置并在执行下一个应用程序之前重建应用程序上下文测试。
+
+请参阅 TestContext框架的[Context Management](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-ctx-management)和 [Context Caching](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-ctx-management-caching)。
+
+### 3.2.2. 测试的依赖注入
+
+当TestContext 框架加载您的应用程序上下文时，它可以选择使用依赖项注入来配置测试类的实例。这提供了一种方便的机制，可通过使用应用程序上下文预配置的Bean来设置测试。这里的一个很大的好处是，您可以在各种测试场景中重复使用应用程序上下文（例如，用于配置Spring管理对象图，事务代理，数据源实例等），从而避免需要复制复杂的测试固定设置以进行单个测试案例。
+
+例如，考虑一个场景，其中我们有一个类（HibernateTitleRepository），该类实现了Title域实体的数据访问逻辑。我们想编写测试以下领域的集成测试：
+
+- Spring配置：基本上，所有内容是否与HibernateTitleRepository Bean的配置有关？
+- Hibernate 映射文件配置：所有内容是否正确映射，并且是否适当地进行懒加载设置？
+- HibernateTitleRepository的逻辑：该类配置的实例是否按预期执行？
+
+请参阅使用[TestContext framework](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-fixture-di)的测试的依赖注入。
+
+### 3.2.3. 事务管理
+
+在访问真实数据库的测试中，一个常见问题是它们对持久存储状态的影响。即使您使用开发数据库，对状态的更改也可能影响未来的测试。同样，在事务之外，无法执行（或验证）许多操作（例如插入或修改持久数据）。
+
+TestContext框架解决了此问题。默认情况下，该框架为每个测试创建并回滚事务。您编写代码时可以假定事务存在。如果您在测试中调用事务代理对象，则根据配置的事务语义，它们能正确工作。
+
+另外，如果测试方法在用于测试的事务中运行时删除了所选表的内容，则默认情况下的事务将回滚，并且数据库在执行测试之前返回其状态。通过使用测试应用程序上下文中定义的PlatformTransactionManager bean，向测试提供了事务支持。
+
+如果您想进行事务提交（不寻常，但当您希望特定测试填充或修改数据库时偶尔有用），可以告诉TestContext框架通过使用[`@Commit`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations) 使事务提交，而不是回滚。
+
+请参阅[TestContext framework](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-tx)的事务管理。
+
+### 3.2.4. 集成测试支持类
+
+Spring TestContext框架提供了几个抽象支持类，以简化集成测试的编写。这些基本测试类提供了明确定义的钩子，并在测试框架中提供了方便的实例变量和方法，可让您访问：
+
+- `ApplicationContext`，用于执行明确的Bean查找或测试整个上下文的状态。
+-  `JdbcTemplate`，用于执行SQL语句查询数据库。您可以使用此类查询在执行与数据库相关的应用程序代码之前和之后确认数据库状态，并确保此类查询在与应用程序代码相同的事务范围内运行。与ORM工具一起使用时，请务必避免 [false positives](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-tx-false-positives)。
+
+此外，您可能需要创建自定义的，应用程序范围的超类，并使用实例变量和特定于项目的方法。
+
+请参阅[TestContext framework](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-tx)的支持类。
+
+## 3.3. JDBC测试支持
+
+org.springframework.test.jdbc软件包包含JdbcTestUtils，它是JDBC相关的工具函数的集合，旨在简化标准数据库测试方案。具体而言，JdbcTestUtils提供了以下静态工具方法：
+
+- `countRowsInTable(..)`: 计算给定表中的行数。
+- `countRowsInTableWhere(..)`: 使用提供的Where子句来计算给定表中的行数。
+- `deleteFromTables(..)`: 从指定的表中删除所有行。
+- `deleteFromTableWhere(..)`: 使用提供的Where子句从给定表中删除行。
+- `dropTables(..)`: drop指定的表。
+
+> :bulb:[`AbstractTransactionalJUnit4SpringContextTests`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-support-classes-junit4)和[`AbstractTransactionalTestNGSpringContextTests`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-support-classes-testng)提供了便利的方法，可将上述方法委派给JdbcTestUtils中的方法。
+>
+> spring-jdbc模块提供了配置和启动嵌入式数据库的支持，您可以在与数据库交互的集成测试中使用。有关详细信息，请参阅[Embedded Database Support](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/data-access.html#jdbc-embedded-database-support) 和 [Testing Data Access Logic with an Embedded Database](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/data-access.html#jdbc-embedded-database-dao-testing)。
+
+
+
+## 3.4. 注解
+
+本节涵盖了测试Spring应用程序时可以使用的注解。它包括以下主题：
+
+- [Spring Testing Annotations](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations-spring)
+- [Standard Annotation Support](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations-standard)
+- [Spring JUnit 4 Testing Annotations](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations-junit4)
+- [Spring JUnit Jupiter Testing Annotations](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations-junit-jupiter)
+- [Meta-Annotation Support for Testing](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations-meta)
+
+
+
+### 3.4.1. Spring Testing注解
+
+
+
 
 
 
