--- a/docs/01.文档翻译/01.Spring Framework/02.testing.md
+++ b/docs/01.文档翻译/01.Spring Framework/02.testing.md
@@ -678,6 +678,393 @@ void userTest() {
 
 ### 3.4.3. Spring JUnit4测试注解
 
+仅当与 [SpringRunner](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-junit4-runner), [Spring’s JUnit 4 rules](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-junit4-rules), 或[Spring’s JUnit 4 support classes](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-support-classes-junit4)一起使用时，才支持以下注解：
+
+- [`@IfProfileValue`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations-junit4-ifprofilevalue)
+- [`@ProfileValueSourceConfiguration`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations-junit4-profilevaluesourceconfiguration)
+- [`@Timed`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations-junit4-timed)
+- [`@Repeat`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations-junit4-repeat)
+
+**`@IfProfileValue`**
+
+@IfProfileValue表示针对特定的测试环境启用了被注解的测试。如果配置的ProfileValueSource返回提供的name的匹配value，则启用测试。否则，测试将被禁用并被忽略。
+
+您可以在类级别或方法级别使用@IfProfileValue。@IfProfileValue的类级别使用优先于该类或其子类中的任何方法。具体而言，如果在类级别和方法级别启用了测试，则启用测试。@IfProfileValue的缺失意味着该测试是隐式启用的。这类似于Junit 4的@Ignore注解的语义，只是@Ignore的存在总是禁用测试。
+
+以下示例显示了具有@IfProfileValue的测试：
+
+```java
+@IfProfileValue(name="java.vendor", value="Oracle Corporation") //仅当Java供应商为“ Oracle Corporation”时，才运行此测试。
+@Test
+public void testProcessWhichRunsOnlyOnOracleJvm() {
+    // some logic that should run only on Java VMs from Oracle Corporation
+}
+```
+
+另外，您可以使用values列表（OR语义）配置@IfProfileValue，以在Junit 4环境中实现对测试组的类似TestNG的支持。考虑以下示例：
+
+```java
+@IfProfileValue(name="test-groups", values={"unit-tests", "integration-tests"}) //单元测试和集成测试。
+@Test
+public void testProcessWhichRunsForUnitOrIntegrationTestGroups() {
+    // some logic that should run only for unit and integration test groups
+}
+```
+
+**`@ProfileValueSourceConfiguration`**
+
+@ProfileValueSourceConfiguration是一种类级别注解，指定在检索通过@IfProfileValue注解配置的配置文件值时要使用的ProfileValueSource类型。如果未声明@ProfileValueSourceConfiguration进行测试，则默认情况下使用SystemProfileValueSource。以下示例显示了如何使用@ProfileValueSourceConfiguration：
+
+```java
+@ProfileValueSourceConfiguration(CustomProfileValueSource.class) 
+public class CustomProfileValueSourceTests {
+    // class body...
+}
+```
+
+**`@Timed`**
+
+@Timed表示，带注解的测试方法必须在指定的时间段（以毫秒为单位）完成执行。如果测试执行时间超过指定的时间段，则测试失败。
+
+时间段包括运行测试方法本身，任何重复测试（请参阅@Repeat），以及任何设置或拆除测试fixture的时间。以下示例显示了如何使用它：
+
+```java
+@Timed(millis = 1000) 
+public void testProcessWithOneSecondTimeout() {
+    // some logic that should not take longer than 1 second to run
+}
+```
+
+Spring的@Timed注解的语义与Junit 4的@Test（timeout =…）支持不同。具体而言，由于Junit 4处理测试执行超时的方式（即，通过在单独线程中执行测试方法），@Test（timeout =…）如果测试花费太长，则抢占式地测试失败。另一方面，Spring的@Timed并没有抢占式失败测试，而是要等待测试在失败之前完成。
+
+**`@Repeat`**
+
+@Repeat表示必须重复运行带该注解的测试方法。在注解中指定了要运行测试方法的次数。
+
+要重复执行的范围包括测试方法本身的执行以及任何设置或拆除测试fixture。以下示例显示了如何使用@Repeat注释：
+
+```java
+@Repeat(10) 
+@Test
+public void testProcessRepeatedly() {
+    // ...
+}
+```
+
+
+
+### 3.4.4. Spring JUnit Jupiter测试注解
+
+与[`SpringExtension`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-junit-jupiter-extension)和Junit Jupiter（即Junit 5中的编程模型）一起使用时，支持以下注解：
+
+- [`@SpringJUnitConfig`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations-junit-jupiter-springjunitconfig)
+- [`@SpringJUnitWebConfig`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations-junit-jupiter-springjunitwebconfig)
+- [`@TestConstructor`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations-testconstructor)
+- [`@NestedTestConfiguration`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations-nestedtestconfiguration)
+- [`@EnabledIf`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations-junit-jupiter-enabledif)
+- [`@DisabledIf`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations-junit-jupiter-disabledif)
+
+**`@SpringJUnitConfig`**
+
+@SpringJUnitConfig是一个复合的注释，它结合了Spring TestContext 框架中的@ContextConfiguration和 JUnit Jupiter的@ExtendWith(SpringExtension.class)。它可以在类级别用作@ContextConfiguration的替换。关于配置选项，@ContextConfiguration和@SpringJUnitConfig之间的唯一区别是，可以在@SpringJUnitConfig中使用value属性来声明组件类。
+
+以下示例显示了如何使用@SpringJUnitConfig指定配置类：
+
+```java
+@SpringJUnitConfig(TestConfig.class) 
+class ConfigurationClassJUnitJupiterSpringTests {
+    // class body...
+}
+```
+
+以下示例显示了如何使用@SpringJUnitConfig来指定配置文件的位置：
+
+```java
+@SpringJUnitConfig(locations = "/test-config.xml") 
+class XmlJUnitJupiterSpringTests {
+    // class body...
+}
+```
+
+有关更多详细信息，请参见[Context Management](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-ctx-management)和[`@SpringJUnitConfig`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/test/context/junit/jupiter/SpringJUnitConfig.html) 及@ContextConfiguration的javadoc。
+
+**`@SpringJUnitWebConfig`**
+
+@SpringJUnitWebConfig是一个复合的注释，它结合了Spring TestContext 框架中的@WebAppConfiguration和 JUnit Jupiter的@ExtendWith(SpringExtension.class)。它可以在类级别用作@ContextConfiguration和@WebAppConfiguration的替换。关于配置选项，@ContextConfiguration和@SpringJUnitWebConfig之间的唯一区别是，可以在@SpringJUnitWebConfig中使用value属性来声明组件类。此外，您只能通过在@SpringJUnitWebConfig中使用resourcePath属性来覆盖@WebAppConfiguration的value属性。
+
+以下示例显示了如何使用@SpringJUnitWebConfig来指定配置类：
+
+```java
+@SpringJUnitWebConfig(TestConfig.class) 
+class ConfigurationClassJUnitJupiterSpringWebTests {
+    // class body...
+}
+```
+
+以下示例显示了如何使用@SpringJUnitWebConfig来指定配置文件的位置：
+
+```java
+@SpringJUnitWebConfig(locations = "/test-config.xml") 
+class XmlJUnitJupiterSpringWebTests {
+    // class body...
+}
+```
+
+有关更多详细信息，请参见[Context Management](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-ctx-management)和 [`@SpringJUnitWebConfig`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/test/context/junit/jupiter/web/SpringJUnitWebConfig.html), [`@ContextConfiguration`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/test/context/ContextConfiguration.html)及[`@WebAppConfiguration`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/test/context/web/WebAppConfiguration.html) 的javadoc。
+
+**`@TestConstructor`**
+
+@TestConstructor是一种类级注解，用于配置测试类构造函数的参数如何从测试ApplicationContext中的组件注入。
+
+如果@TestConstructor在测试类中不存在或 meta-present，则将使用默认的*test constructor autowire mode*。有关如何更改默认模式的详细信息，请参见下面的提示。但是请注意，构造函数上@Autowired的本地声明优先于@TestConstructor和默认模式。
+
+> :bulb:**更改默认的测试构造函数自动注入模式**
+>
+> 可以通过将spring.test.constructor.autowire.mode JVM 系统属性设置为all，更改默认测试构造器自动注入模式。或者，可以通过SpringProperties机制设置默认模式。
+>
+> 从Spring 5.3开始，默认模式也可以配置为 [JUnit Platform configuration parameter](https://junit.org/junit5/docs/current/user-guide/#running-tests-config-params)。
+>
+> 如果未设置spring.test.constructor.autowire.mode属性，测试类的构造器不会自动注入。
+
+
+
+> :information_source:从Spring框架5.2开始，@TestConstructor仅支持与SpringExtension和 JUnit Jupiter一起使用。请注意，通常会自动为您注册SpringExtension - 例如，当使用@SpringJUnitConfig和@SpringJUnitWebConfig或各种来自Spring Boot测试相关注解时。
+
+**`@NestedTestConfiguration`**
+
+@NestedTestConfiguration是一种类型级注解，用于配置在为内部测试类封闭类层次结构中如何 处理Spring测试配置注解。
+
+如果@NestedTestConfiguration不存在或meta-present，在它的超类层次结构或其包装类层次结构中，将使用默认的*enclosing configuration inheritance mode* 。有关如何更改默认模式的详细信息，请参见下面的提示。
+
+> :bulb: **更改默认的enclosing configuration inheritance mode**
+>
+> 默认的*enclosing configuration inheritance mode*是INHERIT，可以通过将spring.test.enclosing.configuration JVM 系统属性设置为OVERRIDE来更改它。或者，可以通过SpringProperties机制设置默认模式。
+
+[Spring TestContext Framework](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-framework) 框架为以下注解提供了@NestedTestConfiguration语义。
+
+- [`@BootstrapWith`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#spring-testing-annotation-bootstrapwith)
+- [`@ContextConfiguration`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#spring-testing-annotation-contextconfiguration)
+- [`@WebAppConfiguration`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#spring-testing-annotation-webappconfiguration)
+- [`@ContextHierarchy`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#spring-testing-annotation-contexthierarchy)
+- [`@ActiveProfiles`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#spring-testing-annotation-activeprofiles)
+- [`@TestPropertySource`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#spring-testing-annotation-testpropertysource)
+- [`@DynamicPropertySource`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#spring-testing-annotation-dynamicpropertysource)
+- [`@DirtiesContext`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#spring-testing-annotation-dirtiescontext)
+- [`@TestExecutionListeners`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#spring-testing-annotation-testexecutionlisteners)
+- [`@Transactional`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-tx)
+- [`@Commit`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#spring-testing-annotation-commit)
+- [`@Rollback`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#spring-testing-annotation-rollback)
+- [`@Sql`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#spring-testing-annotation-sql)
+- [`@SqlConfig`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#spring-testing-annotation-sqlconfig)
+- [`@SqlMergeMode`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#spring-testing-annotation-sqlmergemode)
+- [`@TestConstructor`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations-testconstructor)
+
+> :information_source:@NestedTestConfiguration的使用通常仅与Junit Jupiter中的@Nested测试类结合在一起。但是，可能还有其他测试框架，并支持使用Spring和此注解的嵌套测试类。
+
+参考[`@Nested` test class configuration](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-junit-jupiter-nested-test-configuration) 获取更多细节。
+
+**`@EnabledIf`**
+
+@EnabledIf表示如果提供的expression为true，则应运行JUnit Jupiter 测试类或方法。具体而言，如果表达式计算为Boolean.TRUE或等于字符串true（忽略大小写），则启用测试。当在类级别应用时，该类中的所有测试方法默认情况下也将自动启用。
+
+表达式可以是以下任何一个：
+
+- [Spring Expression Language](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#expressions) (SpEL) expression.例如: `@EnabledIf("#{systemProperties['os.name'].toLowerCase().contains('mac')}")`
+- Spring [`Environment`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-environment)中可用属性占位符.例如: `@EnabledIf("${smoke.tests.enabled}")`
+- 文本值.例如: `@EnabledIf("true")`
+
+但是请注意，不是属性占位符的动态结果的文本值毫无价值，因为@EnabledIf("false")等价于@Disabled，@EnabledIf("true")逻辑上是没有意义的。
+
+您可以将@EnabledIf用作元注解来创建自定义组成的注解。例如，您可以创建一个自定义@EnabledOnMac注解，如下所示：
+
+```java
+@Target({ElementType.TYPE, ElementType.METHOD})
+@Retention(RetentionPolicy.RUNTIME)
+@EnabledIf(
+    expression = "#{systemProperties['os.name'].toLowerCase().contains('mac')}",
+    reason = "Enabled on Mac OS"
+)
+public @interface EnabledOnMac {}
+```
+
+**`@DisabledIf`**
+
+@DisabledIf表示如果提供的expression为true，则不运行JUnit Jupiter 测试类或方法。具体而言，如果表达式计算为Boolean.TRUE或等于字符串true（忽略大小写），则禁用测试。当在类级别应用时，该类中的所有测试方法默认情况下也将自动禁用。
+
+表达式可以是以下任何一个：
+
+- [Spring Expression Language](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#expressions) (SpEL) expression. 例如: `@DisabledIf("#{systemProperties['os.name'].toLowerCase().contains('mac')}")`
+- Spring [`Environment`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-environment)中可用属性占位符， 例如: `@DisabledIf("${smoke.tests.disabled}")`
+- 文本值.例如: `@DisabledIf("true")`
+
+但是请注意，不是属性占位符的动态结果的文本值毫无价值，因为@DisabledIf("true")等价于@Disabled，@DisabledIf("false")逻辑上是没有意义的。
+
+您可以将@DisabledIf用作元注解来创建自定义组成的注解。例如，您可以创建一个自定义@DisabledOnMac注解，如下所示：
+
+```java
+@Target({ElementType.TYPE, ElementType.METHOD})
+@Retention(RetentionPolicy.RUNTIME)
+@DisabledIf(
+    expression = "#{systemProperties['os.name'].toLowerCase().contains('mac')}",
+    reason = "Disabled on Mac OS"
+)
+public @interface DisabledOnMac {}
+```
+
+### 3.4.5. 测试元注解支持
+
+您可以将大多数与测试相关的注解用作 [meta-annotations](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-meta-annotations) ，以创建自定义组成的注解，并减少在测试套件中的重复配置。
+
+您可以将以下每个用作与 [TestContext framework](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-framework)结合使用的元注解。
+
+- `@BootstrapWith`
+- `@ContextConfiguration`
+- `@ContextHierarchy`
+- `@ActiveProfiles`
+- `@TestPropertySource`
+- `@DirtiesContext`
+- `@WebAppConfiguration`
+- `@TestExecutionListeners`
+- `@Transactional`
+- `@BeforeTransaction`
+- `@AfterTransaction`
+- `@Commit`
+- `@Rollback`
+- `@Sql`
+- `@SqlConfig`
+- `@SqlMergeMode`
+- `@SqlGroup`
+- `@Repeat` *(only supported on JUnit 4)*
+- `@Timed` *(only supported on JUnit 4)*
+- `@IfProfileValue` *(only supported on JUnit 4)*
+- `@ProfileValueSourceConfiguration` *(only supported on JUnit 4)*
+- `@SpringJUnitConfig` *(only supported on JUnit Jupiter)*
+- `@SpringJUnitWebConfig` *(only supported on JUnit Jupiter)*
+- `@TestConstructor` *(only supported on JUnit Jupiter)*
+- `@NestedTestConfiguration` *(only supported on JUnit Jupiter)*
+- `@EnabledIf` *(only supported on JUnit Jupiter)*
+- `@DisabledIf` *(only supported on JUnit Jupiter)*
+
+考虑以下示例：
+
+```java
+@RunWith(SpringRunner.class)
+@ContextConfiguration({"/app-config.xml", "/test-data-access-config.xml"})
+@ActiveProfiles("dev")
+@Transactional
+public class OrderRepositoryTests { }
+
+@RunWith(SpringRunner.class)
+@ContextConfiguration({"/app-config.xml", "/test-data-access-config.xml"})
+@ActiveProfiles("dev")
+@Transactional
+public class UserRepositoryTests { }
+```
+
+如果我们发现我们正在重复基于JUnit  4的测试套件的上述配置，则可以通过引入自定义组成的注解来减少重复配置，该注解集中了Spring的常见测试配置，如下所示：
+
+```java
+@Target(ElementType.TYPE)
+@Retention(RetentionPolicy.RUNTIME)
+@ContextConfiguration({"/app-config.xml", "/test-data-access-config.xml"})
+@ActiveProfiles("dev")
+@Transactional
+public @interface TransactionalDevTestConfig { }
+```
+
+然后，我们可以使用我们的自定义@TransactionalDevTestConfig注解来简化单个基于JUnit  4的测试类的配置，如下：
+
+```java
+@RunWith(SpringRunner.class)
+@TransactionalDevTestConfig
+public class OrderRepositoryTests { }
+
+@RunWith(SpringRunner.class)
+@TransactionalDevTestConfig
+public class UserRepositoryTests { }
+```
+
+如果我们编写使用Junit Jupiter的测试，则可以进一步减少重复代码，因为Junit 5中的注解也可以用作元注解。考虑以下示例：
+
+```java
+@ExtendWith(SpringExtension.class)
+@ContextConfiguration({"/app-config.xml", "/test-data-access-config.xml"})
+@ActiveProfiles("dev")
+@Transactional
+class OrderRepositoryTests { }
+
+@ExtendWith(SpringExtension.class)
+@ContextConfiguration({"/app-config.xml", "/test-data-access-config.xml"})
+@ActiveProfiles("dev")
+@Transactional
+class UserRepositoryTests { }
+```
+
+如果我们发现我们正在重复基于Junit Jupiter的测试套件上的前面配置，则可以通过引入自定义组成的注解来减少重复配置，该注解集中了Spring和Junit Jupiter的常见测试配置，如下：
+
+```java
+@Target(ElementType.TYPE)
+@Retention(RetentionPolicy.RUNTIME)
+@ExtendWith(SpringExtension.class)
+@ContextConfiguration({"/app-config.xml", "/test-data-access-config.xml"})
+@ActiveProfiles("dev")
+@Transactional
+public @interface TransactionalDevTestConfig { }
+```
+
+然后，我们可以使用我们的自定义@TransactionalDevTestConfig注解来简化基于Junit Jupiter的单个测试类的配置，如下：
+
+```java
+@TransactionalDevTestConfig
+class OrderRepositoryTests { }
+
+@TransactionalDevTestConfig
+class UserRepositoryTests { }
+```
+
+由于Junit Jupiter支持@Test，@RepeatedTest，ParameterizedTest和其他可用作元注解的注解，因此您还可以在测试方法级别上创建自定义的构造注解。例如，如果我们希望创建一个组成的注解，将Junit Jupiter的@Test和@Tag注解与Spring的@Transactional注解结合在一起，我们可以创建一个@TransactionalIntegrationTest 注解，如下：
+
+```java
+@Target(ElementType.METHOD)
+@Retention(RetentionPolicy.RUNTIME)
+@Transactional
+@Tag("integration-test") // org.junit.jupiter.api.Tag
+@Test // org.junit.jupiter.api.Test
+public @interface TransactionalIntegrationTest { }
+```
+
+然后，我们可以使用我们的自定义@TransactionalIntegrationTest注解来简化基于Junit Jupiter的单个测试方法的配置，如下：
+
+```java
+@TransactionalIntegrationTest
+void saveOrder() { }
+
+@TransactionalIntegrationTest
+void deleteOrder() { }
+```
+
+更多细节请参考 [Spring Annotation Programming Model](https://github.com/spring-projects/spring-framework/wiki/Spring-Annotation-Programming-Model)  wiki页面。
+
+
+
+## 3.5. Spring TestContext 框架
+
+Spring TestContext Framework（位于org.springframework.test.context软件包中）提供了通用的，注解驱动的单元和集成测试支持。TestContext Framework还对覆盖配置提供重要且方便的机制，可以通过基于注解的配置覆盖合理的默认值。
+
+除了通用测试基础架构外，TestContext框架还为Junit 4，Junit Jupiter（又名Junit 5）和TestNG提供明确的支持。对于Junit 4和TestNG，Spring提供抽象支持类。此外，Spring为Junit 4提供了自定义的Junit Runner和自定义Junit Rules，以及Junit Jupiter的自定义Extension，可让您编写所谓的POJO测试类。POJO测试类不需要扩展特定的类层次结构，例如abstract支持类。
+
+以下部分概述了TestContext Framework的内部细节。如果您只对使用该框架感兴趣，并且对自定义监听器或自定义加载器不感兴趣，请随时直接转到配置([context management](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-ctx-management), [dependency injection](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-fixture-di), [transaction management](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-tx)），[support classes](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-support-classes),和[annotation support](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations) 部分。
+
+### 3.5.1. 关键抽象
+
+
+
+
+
+
+
+
+
 
 
 
