feat: spring testing翻译至3.5.5

--- a/docs/01.文档翻译/01.Spring Framework/02.testing.md
+++ b/docs/01.文档翻译/01.Spring Framework/02.testing.md
@@ -1118,7 +1118,92 @@ Spring提供按以下顺序注册的TestExecutionListener实现：
 - `SqlScriptsTestExecutionListener`: 运行使用@Sql注解配置的SQL脚本。
 - `EventPublishingTestExecutionListener`: 将测试执行事件发布到测试的ApplicationContext（请参阅[Test Execution Events](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-test-execution-events)）。
 
+**注册`TestExecutionListener` 实现**
 
+您可以使用@TestExecutionListeners注解来注册测试类及其子类的TestExecutionListener实现。有关详细信息和示例，请参见 [`@TestExecutionListeners`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/test/context/TestExecutionListeners.html)的[annotation support](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#integration-testing-annotations) javadoc。
+
+**自动发现默认`TestExecutionListener` 实现**
+
+使用@TestExecutionListeners注册TestExecutionListener实现，适用于在有限的测试方案中使用的自定义监听器。但是，如果需要在整个测试套件中使用自定义监听器，则可能会变得笨拙。通过SpringFactoriesLoader机制自动发现默认的TestExecutionListener实现来解决此问题。
+
+具体而言，spring-test模块META-INF/spring.factories属性文件中声明所有核心默认TestExecutionListener实现。第三方框架和开发人员可以通过自己的META-INF/spring.factories属性文件，以相同的方式将自己的TestExecutionListener实现贡献给默认监听器列表。
+
+**排序`TestExecutionListener` 实现**
+
+当TestContext框架通过上述SpringFactoriesLoader机制发现默认的TestExecutionListener实现时，通过使用Spring的AnnotationAwareOrderComparator对实例化的监听器进行排序，该AnnotationAwareOrderComparator接受Spring的Ordered接口和 @Order注解。由Spring提供的AbstractTestExecutionListener和所有默认的TestExecutionListener实现，以合适的值实现了Ordered接口。因此，第三方框架和开发人员应确保通过实现Ordered或声明 @Order来以适当的顺序注册其默认的TestExecutionListener实现。有关核心默认TestExecutionListener实现的getOrder()方法，请参见javadoc获取有关分配给每个核心监听器的值。
+
+**合并`TestExecutionListener`实现**
+
+如果通过@TestExecutionListeners注册自定义TestExecutionListener，则不会注册默认的监听器。在大多数常见的测试方案中，这有效地迫使开发人员除了任何自定义监听器外还需手动声明所有默认监听器。如以下清单所示：
+
+```java
+@ContextConfiguration
+@TestExecutionListeners({
+    MyCustomTestExecutionListener.class,
+    ServletTestExecutionListener.class,
+    DirtiesContextBeforeModesTestExecutionListener.class,
+    DependencyInjectionTestExecutionListener.class,
+    DirtiesContextTestExecutionListener.class,
+    TransactionalTestExecutionListener.class,
+    SqlScriptsTestExecutionListener.class
+})
+class MyTest {
+    // class body...
+}
+```
+
+这种方法面临的挑战是，它要求开发人员确切知道哪些监听器是默认注册的。此外，一组默认的监听器可以从发行版中更改，例如，SqlScriptsTestExecutionListener是在Spring 4.1中引入的，DirtiesContextBeforeModesTestExecutionListener在Spring 4.2中引入。此外，通过使用上述自动发现机制，诸如Spring Boot和Spring Security 之类的第三方框架注册自己的默认TestExecutionListener实现。
+
+为了避免必须了解并重新声明所有默认的监听器，您可以将@TestExecutionListeners的mergeMode属性设置为MergeMode.MERGE_WITH_DEFAULTS。MERGE_WITH_DEFAULTS表明应将本地声明的监听器与默认监听器合并。合并算法确保从列表中删除重复配置项，并根据AnnotationAwareOrderComparator的语义对所得的合并后的监听器列表进行排序。如果监听器实现Ordered或用@Order注解，则可以影响与默认值合并的位置。否则，合并后，将本地声明的监听器追加到默认听众列表中。
+
+例如，如果上一个示例中的MyCustomTestExecutionListener类配置其order值（例如，500）小于ServletTestExecutionListener的顺序（1000），则可以将MyCustomTestExecutionListener与默认列表自动合，且其顺序在ServletTestExecutionListener的前面，前一个示例可以用以下形式代替：
+
+```java
+@ContextConfiguration
+@TestExecutionListeners(
+    listeners = MyCustomTestExecutionListener.class,
+    mergeMode = MERGE_WITH_DEFAULTS
+)
+class MyTest {
+    // class body...
+}
+```
+
+### 3.5.4. 测试执行事件
+
+Spring框架5.2中引入的EventPublishingTestExecutionListener提供了实现自定义TestExecutionListener的替代方法。测试ApplicationContext中的组件可以监听EventPublishingTestExecutionListener发布的以下事件，每个事件都与TestExecutionListenerAPI中的方法相对应。
+
+- `BeforeTestClassEvent`
+- `PrepareTestInstanceEvent`
+- `BeforeTestMethodEvent`
+- `BeforeTestExecutionEvent`
+- `AfterTestExecutionEvent`
+- `AfterTestMethodEvent`
+- `AfterTestClassEvent`
+
+> 这些事件仅在已加载ApplicationContext时才发布。
+
+这些事件可能因各种原因而被消费，例如重置mock bean或跟踪测试执行。消费测试执行事件而不是实现自定义TestExecutionListener的优点是，在测试应用程序中注册的任何Spring bean可以消费测试执行事件，并且此类bean可以直接从依赖注入和ApplicationContext的其他功能中受益。相比之下，TestExecutionListener不是ApplicationContext中的bean。
+
+为了监听测试执行事件，Spring Bean可以选择实现org.springframework.context.ApplicationListener接口。另外，可以用@EventListener注解监听器方法，并配置为监听上面列出的特定事件类型之一。由于这种方法的普及，Spring提供了以下专用@EventListener注解，以简化测试执行事件监听器的注册。这些注解位于org.springframework.test.context.event.annotation软件包中。
+
+- `@BeforeTestClass`
+- `@PrepareTestInstance`
+- `@BeforeTestMethod`
+- `@BeforeTestExecution`
+- `@AfterTestExecution`
+- `@AfterTestMethod`
+- `@AfterTestClass`
+
+**异常处理**
+
+默认情况下，如果测试执行事件监听器在消费事件时会引发异常，则该异常将传播到使用中的基础测试框架（例如JUnit或TestNG）。例如，如果消费BeforeTestMethodEvent会导致异常，则相应的测试方法将因异常而失败。相反，如果异步测试执行事件监听器会引发异常，则该异常不会传播到基础测试框架。有关异步异常处理的更多详细信息，请参考@EventListener的类级别javadoc。
+
+**异步监听器**
+
+如果您希望特定的测试执行事件监听器异步处理事件，则可以使用Spring的[regular `@Async` support](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/integration.html#scheduling-annotation-support-async).。有关更多详细信息，请参考@EventListener的类级别javadoc。
+
+### 3.5.5. 上下文管理
 
 
 
